--- a/.stackblitzrc
+++ b/.stackblitzrc
@@ -1,5 +1,5 @@
 {
-  "installDependencies": false,
+  "installDependencies": true,
   "startCommand": "npm start",
   "env": {
     "NODE_ENV": "development"
