--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "scripts": {
-      "start": "servor --reload"
+        "start": "node app"
     },
     "dependencies": {
-      "servor": "^4.0.2"
+        "express": "^4.21.0"
     }
-  }
+}
